Update ddr_fw.bin to v1.7
Signed-off-by: linmin <linmin@eswincomputing.com>

--- a/ddr/README
+++ b/ddr/README
@@ -12,7 +12,10 @@ Release Notes
 ===============================================================================
 
 -------------------------------------------------------------------------------
-Latest Release Version: 1.4
+Latest Release Version: 1.7
+ddr_fw.bin:     MD5: 67d57427215970d4dbf35973d20291db
+-------------------------------------------------------------------------------
+Version: 1.4
 ddr_fw.bin:     MD5: 49c4f2a63e99416d3ff26d1477def669
 ddr_fw_ecc.bin: MD5: df1a8711956de624a5c2acc6f75ce823
 -------------------------------------------------------------------------------
